--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Select Role</title>
+    <link rel ="icon" href="../assets/images/logo/Logo.png">
+    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./js/util.js" defer></script>
+    <script src="./js/render.js" defer></script>
+    <script src="./js/components/header.js" defer></script>
+    <script src="./js/components/footer.js" defer></script>
+</head>
+
+<body>
+    <main class="main-content">
+        <div class="container">
+            <div class="wrapper">
+                <div id="header"></div>
+                <h2>Select Your Role</h2>`
+                <button id="btn-admin" onclick="selectRole('Admin')">Admin</button>
+                <button id="btn-doctor" onclick="selectRole('Doctor')">Doctor</button>
+                <button id="btn-patient" onclick="selectRole('Patient')">Patient</button>
+                <div id="footer"></div>
+            </div>
+        </div>
+    </main>
+
+    <div id="modal" class="modal">
+        <button id="closeModal">close modal</button>
+        <div id="modal-body">
+        </div>
+    </div>
+
+    <script type="module" src="../js/services/index.js" defer></script>
+</body>
+</html>
+
 <!-- index.html -->
 <!-- 
 
