--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="wrapper">
                 <div id="header"></div>
-                <h2>Select Your Role</h2>`
+                <h2>Select Your Role</h2>
                 <button id="btn-admin" onclick="selectRole('Admin')">Admin</button>
                 <button id="btn-doctor" onclick="selectRole('Doctor')">Doctor</button>
                 <button id="btn-patient" onclick="selectRole('Patient')">Patient</button>
